test/org/midica/testfiles/failing/soundbank-url-invalid.midica
INCLUDE inc/instruments.midica

SOUNDBANK http:/ /midica.org/assets/sound/invalid.sf2

0 c /4
